--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div id="game-canvas">
+      <!-- <h1>hello world</h1> -->
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
